fix white overflow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,11 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -67,6 +72,11 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
